@@ -96,3 +96,4 @@ Fixes:
     * Fix evas_object_image_is_inside()
     * eio functions no longer crash when passed NULL and throw errors accordingly
     * Fix eina_xattr_value_ls() and eina_xattr_value_fd_ls()
+    * Fix mask write lines to not choose too small segments
